init Elasticsearch
